# psh-sdk

./: .gitmodules  Cargo.toml  build.rs  wit
aot/: Cargo.toml
aot/src/: args.rs  main.rs
crates/op/perf/: Cargo.toml  build.rs  wit
crates/op/system/: Cargo.toml  wit
docs/template/: Cargo.toml
docs/template/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
op/file/: Cargo.toml
op/file/src/: lib.rs
op/intrinsics/: Cargo.toml
op/intrinsics/src/: lib.rs
op/perf/: Cargo.toml  wit
op/perf/src/: lib.rs
op/perf/src/convert/: config.rs  cpu.rs  event.rs  event_scope.rs  extra_config.rs  process.rs  stat.rs
op/perf/src/counting/: mod.rs
op/perf/src/counting/group/: mod.rs  raw.rs
op/perf/src/counting/single/: mod.rs  raw.rs
op/perf/src/tests/: counter.rs  counter_group.rs  mod.rs
op/perf/wit/: world.wit
prelude/: Cargo.toml  build.rs
prelude/include/file/: Cargo.toml
prelude/include/file/src/: lib.rs
prelude/include/file/src/wrapped/: mod.rs
prelude/include/file/wit/: op.wit
prelude/include/intrinsics/: Cargo.toml
prelude/include/intrinsics/src/wrapped/: mod.rs
prelude/include/intrinsics/wit/: op.wit
prelude/include/macros/: Cargo.toml
prelude/include/macros/src/: lib.rs
prelude/include/perf/: Cargo.toml  build.rs
prelude/include/perf/src/wrapped/: mod.rs
prelude/include/perf/src/wrapped/counting/: counter.rs  counter_group.rs  counter_guard.rs  fixed_counter_group.rs  mod.rs  stat.rs
prelude/include/perf/types/: Cargo.toml
prelude/include/perf/types/src/: config.rs  lib.rs
prelude/include/perf/types/src/counting/: config.rs  mod.rs  stat.rs
prelude/include/perf/types/src/event/: breakpoint.rs  dynamic_pmu.rs  hardware.rs  mod.rs  raw.rs  scope.rs  software.rs  tracepoint.rs
prelude/include/perf/wit/: op.wit
prelude/include/proc-macros/: Cargo.toml
prelude/include/proc-macros/src/: lib.rs
prelude/src/: intrinsics.rs  lib.rs  macros.rs  pre_defined.rs
prelude/src/op/: file.rs  intrinsics.rs  mod.rs  perf.rs
prelude/wit/: op.wit
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/infra/: id_map.rs  mod.rs  str.rs  wasm.rs
src/: lib.rs
src/data_export/: mod.rs
src/perf/: mod.rs
src/system/: cpu.rs  disk.rs  interrupt.rs  memory.rs  mod.rs  network.rs  os.rs  process.rs  rps.rs  vmstat.rs
src/wit/: mod.rs
strategy-compiler/: Cargo.toml
strategy-compiler/src/: args.rs  main.rs
strategy-macros/: Cargo.toml
strategy-macros/src/: lib.rs
strategy-prelude/: Cargo.toml  build.rs
strategy-prelude/src/: intrinsics.rs  lib.rs
strategy-prelude/wit/: strategy.wit
strategy-runtime/: Cargo.toml
strategy-runtime/src/: lib.rs
strategy-template/: Cargo.toml
strategy-template/src/: lib.rs
(+99 files in other folders)
