[package]
name = "profiling"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prelude",
    "prelude/include/*",
    "op/*",
]
exclude = [
    "aot",
    "docs",
    "test-resources",
]

[features]
prelude = ["dep:profiling-prelude"]

#[profile.release]
#lto = true
#strip = true
#codegen-units = 1

[dependencies]
profiling-prelude = { path = "./prelude", optional = true }
