[package]
name = "profiling"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "docs/template",
    "crates/op/*"
]
exclude = [
]

[workspace.package]
version = "0.1.0"

[features]

#[profile.release]
#lto = true
#strip = true
#codegen-units = 1

[dependencies]
profiling-op-perf = { path = "crates/op/perf" }