[package]
name = "profiling"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prelude",
    "prelude/include/*",
    "runtime",
    "op/*",
]
exclude = [
    "aot",
    "docs",
    "test-resources",
]

[features]
prelude = ["dep:profiling-prelude"]
runtime = ["dep:profiling-runtime"]

#[profile.release]
#lto = true
#strip = true
#codegen-units = 1

[dependencies]
profiling-prelude = { path = "./prelude", optional = true }
profiling-runtime = { path = "./runtime", optional = true }
