[package]
name = "profiling-aot"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "paot"
path = "src/main.rs"

#[profile.release]
#lto = true
#strip = true
#codegen-units = 1

[dependencies]
anyhow = "1.0.75"
wasmtime = "16.0.0"
colored = "2.1.0"
clap = { version = "4.4.11", features = ["derive"] }
